<resources>
    <string name="app_name">Completionist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_web_client_id">35324974431-svf56c7due5vdaids7usf45nuh9j03kv.apps.googleusercontent.com</string>
    <string name="settings">Settings</string>
    <string name="change_email">Change Email</string>
    <string name="settings_change_email">Change Email</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_block_accounts">Block Accounts</string>
    <string name="settings_about">About</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_notifications">Notifications</string>
    <string name="setting_change_password">Change Password</string>
</resources>