<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFBEBE"
    tools:context=".ProfiePage.SettingsPage">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/logo_with_hex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/michroma"
        android:text="@string/settings"
        android:textColor="#333333"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_email_button"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#D9D9D9"
        android:fontFamily="@font/michroma"
        android:text="@string/settings_change_email"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/michroma"
        android:text="@string/setting_change_password"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_email_button" />

    <Button
        android:id="@+id/privacy_policy_button"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/michroma"
        android:text="@string/settings_privacy_policy"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button" />

    <Button
        android:id="@+id/notifications"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/michroma"
        android:text="@string/settings_notifications"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_button" />

    <Button
        android:id="@+id/blocked_accounts_button"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/michroma"
        android:text="@string/settings_block_accounts"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/michroma"
        android:text="@string/settings_about"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blocked_accounts_button" />

    <Button
        android:id="@+id/logout"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="#D9D9D9"
        android:fontFamily="@font/michroma"
        android:text="@string/settings_logout"
        android:textAlignment="textStart"
        android:textColor="#222222"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_button" />

    <include
        android:id="@+id/include"
        layout="@layout/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>